--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="card">
             <div class="header">
                 <h1>Credit Card Generator</h1>
-                <p class="subtitle">Made by @GetCrack</p>
+                <p class="subtitle">⚠️ For Educational Purposes Only</p>
             </div>
 
             <!-- Rest of the generator content remains the same -->
@@ -169,3 +169,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
