--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <!-- BIN Section -->
                 <div class="form-group">
                     <label class="section-label">BIN</label>
-                    <input type="text" id="binInput" class="bin-input" maxlength="6" value="411111" placeholder="Enter 6-digit BIN">
+                    <input type="text" id="binInput" class="bin-input" maxlength="6" value="" placeholder="Enter 6-digit BIN">
                 </div>
 
                 <!-- Date Section -->
@@ -76,7 +76,7 @@
                                     <option value="11">11</option>
                                     <option value="12">12</option>
                                 </select>
-                                <input type="text" id="yearInput" class="year-input" maxlength="2" value="24" placeholder="YY">
+                                <input type="text" id="yearInput" class="year-input" maxlength="2" value="25" placeholder="YY">
                             </div>
                         </div>
                     </div>
@@ -169,4 +169,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
